overflow  fix

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -44,7 +44,8 @@ body {
     color: var(--text);
 
     min-height: 100vh;
-    overflow-x:hidden;
+    width: 100%;
+    max-width: 100vw;
 }
 
 ::selection {
